--- a/OsEngine/Views/MyRobot.xaml
+++ b/OsEngine/Views/MyRobot.xaml
@@ -36,8 +36,8 @@
             
             <TextBlock Text="Emitent :"/>
 
-            <ComboBox ItemsSource="{Binding ListSecurities}"
-                      SelectedItem="{Binding SelectedSecurity}"/>
+            <Button Content="Select Security"
+                    Command="{Binding CommandSelectSecurity}"/>
         </StackPanel>
 
         <Grid Grid.Row="1">
